--- a/templates/taxi/manufacturer_confirm_delete.html
+++ b/templates/taxi/manufacturer_confirm_delete.html
@@ -6,6 +6,6 @@
     {% csrf_token %}
     <p>Are you sure you want to delete "{{ manufacturer.name }}"?</p>
     <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a href="{% url 'taxi:manufacturer-list' %}" class="btn btn-secondary">Cancel</a>
+    <a href="javascript:history.back()" class="btn btn-secondary">Cancel</a>
   </form>
 {% endblock %}
